src/test/ui/feature-gates/feature-gate-register_tool.stderr
error[E0658]: the `#[register_tool]` attribute is an experimental feature
  --> $DIR/feature-gate-register_tool.rs:1:1
   |
LL | #![register_tool(tool)]
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #66079 <https://github.com/dust-lang/dust/issues/66079> for more information
   = help: add `#![feature(register_tool)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
